--- a/teht01/MainPage.xaml
+++ b/teht01/MainPage.xaml
@@ -11,11 +11,11 @@
     <Grid Background="#e6664a">
         <TextBlock x:Name="NumberOfDrawsTextBlock" HorizontalAlignment="Left" Margin="100,61,0,0" TextWrapping="Wrap" Text="Number of draws:" VerticalAlignment="Top"/>
         <TextBox x:Name="NumberOfDrawsTextBox" HorizontalAlignment="Left" Margin="321,61,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
-        <Button x:Name="draw" Content="Draw" HorizontalAlignment="Left" Margin="100,98,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="Clear" Content="Clear" HorizontalAlignment="Left" Margin="327,98,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="Draw" Content="Draw" HorizontalAlignment="Left" Margin="100,98,0,0" VerticalAlignment="Top" Click="Draw_Click"/>
+        <Button x:Name="Clear" Content="Clear" HorizontalAlignment="Left" Margin="327,98,0,0" VerticalAlignment="Top" Click="Clear_Click"/>
         <TextBlock x:Name="RandomNumbersTextBlock" HorizontalAlignment="Left" Margin="103,188,0,0" TextWrapping="Wrap" Text="Random numbers:" VerticalAlignment="Top"/>
         <ScrollViewer HorizontalAlignment="Left" Height="321" Margin="103,213,0,0" VerticalAlignment="Top" Width="356" >
-            TextBlock 
+            <TextBlock Name="DrawsTextBlock" FontSize="20" Height="Auto" Width="Auto" Margin="10,10,0,0"/>
         </ScrollViewer>
 
 
